--- a/index.html
+++ b/index.html
@@ -8,24 +8,8 @@
     </head>
 
     <body>
-        <p>Привіт!</p> 
-
-        <h1>Заголовок 1 рівня</h1>
-        <h2>Заголовок 2 рівня</h2>
-        <h3>Заголовок 3 рівня</h3>
-        <h4>Заголовок 4 рівня</h4>
-        <h5>Заголовок 5 рівня</h5>
-        <h6>Заголовок 6 рівня</h6>
-
-        <!-- ordered list (нумерований список) -->
-        <ol>
-            <li><p>Lorem ipsum dolor sit.</p></li>
-            <li>list item</li>
-            <li>list item</li>
-            <li>list item</li>
-        </ol>
-        <!-- unordered list (маркований список) -->
-
+       <a href="/lab1/lab1.html">lab1</a>
+       <a href="/lab2/lab2.html">lab2</a>
     </body>
 
 </html>
